[package]
name = "silam-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
csv = "1.3.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
reqwest = "0.12.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
